<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_star_border"
        android:title="@string/cd_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_text_larger"
        android:title="@string/text_larger"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_text_smaller"
        android:title="@string/text_smaller"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_email"
        android:title="@string/send_email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copy_link"
        android:title="@string/copy_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_web"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />
</menu>
